--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -277,6 +277,8 @@
         </div>
         <section>
             <style>
+                 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+        
 
 .post-full-meta {
     background: var(--whitegrey);
