--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -309,7 +309,7 @@ style attribute {
 }
 body {
     color: #262626;
-    font-family: Noto Sans Sinhala,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif,"Poppins", sans-serif;
+    font-family: Noto Sans Sinhala,"Poppins", sans-serif;
     font-size: 1.5rem;
     line-height: 1.6em;
     font-weight: 400;
