--- a/obu.html
+++ b/obu.html
@@ -854,7 +854,7 @@ ul a:hover::after {
                                                         <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                     </ul>
                                                     <p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-                                                    <a href="#">Read More...</a>
+                                                    <a href="Old-Boys-Union.html">Read More...</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -918,11 +918,21 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
     <div class="row">
         <h3>Reference</h3>
         <p>
-        <strong><mark>Update!</mark>  www.lasallions.lk</strong>
+        <strong><mark>Update!</mark>  Wikipedia</strong>
         </p>
         
         <p>
-            <a href="www.lasallions.lk" target="_blank">ref to web</a>
+            <a href="www.lasallions.lk" target="_blank">Old LaSallians Union</a>
+            <a href="https://www.facebook.com/LaSallianFederation" target="_blank">La Sallian Federation of Sri Lanka</a>
+            <a href="http://www.umael.com" target="_blank">World Union of Lasallian Former Students</a>
+            <a href="http://www.lasalle.lk" target="_blank">La Salle Colombo</a>
+            <a href="http://www.archdioceseofcolombo.com" target="_blank">Archdiocese of Colombo</a>
+           
+            <!-- [http://www.lasallians.lk/ Old LaSallians Union]
+* [https://www.facebook.com/LaSallianFederation/ La Sallian Federation of Sri Lanka]
+* [http://www.umael.com/ World Union of Lasallian Former Students]
+* [http://www.lasalle.lk/ La Salle Colombo]
+* [http://www.archdioceseofcolombo.com/ Archdiocese of Colombo] -->
         </p>
         <hr>
     </div><!--.row -->
