--- a/obu.html
+++ b/obu.html
@@ -922,11 +922,11 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
         </p>
         
         <p>
-            <a href="www.lasallions.lk" target="_blank">Old LaSallians Union</a>
-            <a href="https://www.facebook.com/LaSallianFederation" target="_blank">La Sallian Federation of Sri Lanka</a>
-            <a href="http://www.umael.com" target="_blank">World Union of Lasallian Former Students</a>
-            <a href="http://www.lasalle.lk" target="_blank">La Salle Colombo</a>
-            <a href="http://www.archdioceseofcolombo.com" target="_blank">Archdiocese of Colombo</a>
+            <a href="www.lasallions.lk" target="_blank">Old LaSallians Union</a> <br>
+            <a href="https://www.facebook.com/LaSallianFederation" target="_blank">La Sallian Federation of Sri Lanka</a> <br>
+            <a href="http://www.umael.com" target="_blank">World Union of Lasallian Former Students</a> <br>
+            <a href="http://www.lasalle.lk" target="_blank">La Salle Colombo</a> <br>
+            <a href="http://www.archdioceseofcolombo.com" target="_blank">Archdiocese of Colombo</a> <br>
            
             <!-- [http://www.lasallians.lk/ Old LaSallians Union]
 * [https://www.facebook.com/LaSallianFederation/ La Sallian Federation of Sri Lanka]
