--- a/obu.html
+++ b/obu.html
@@ -953,6 +953,11 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
             </p>
             
         </div><!--.col -->
+    </div>
+</div>
+    </section>
+</br>
+</br>
         
         <div class="col-md-8">
             <div class="vid">
