--- a/obu.html
+++ b/obu.html
@@ -970,6 +970,103 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
     </section>
 
     </div>
+    <style>
+        .nav {
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: var(--container-color);
+    box-shadow: 0 -1px 12px hsla(var(--hue), var(--sat), 15%, 0.15);
+    width: 100%;
+    height: 4rem;
+    padding: 0 1rem;
+    display: grid;
+    align-content: center;
+    border-radius: 1.25rem 1.25rem 0 0;
+    transition: .4s;
+  }
+}
+
+.nav__list, 
+.nav__link {
+  display: flex;
+}
+
+.nav__link {
+  flex-direction: column;
+  align-items: center;
+  row-gap: 4px;
+  color: var(--title-color);
+  font-weight: 600;
+}
+
+.nav__list {
+  justify-content: space-around;
+}
+
+.nav__name {
+  font-size: var(--tiny-font-size);
+  /* display: none;*/ /* Minimalist design, hidden labels */
+}
+
+.nav__icon {
+  font-size: 1.5rem;
+}
+
+/*Active link*/
+.active-link {
+  position: relative;
+  color: var(--first-color);
+  transition: .3s;
+}
+    </style>
+    <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+            <li class="nav__item">
+                <a href="#home" class="nav__link">
+                    <i class="bx bx-home-alt nav__icon"></i>
+                    <span class="nav__name">Home</span>
+                </a>
+            </li>
+            
+            <li class="nav__item">
+                <a href="#about" class="nav__link">
+                    <i class="bx bx-user nav__icon"></i>
+                    <span class="nav__name">About</span>
+                </a>
+            </li>
+
+            <li class="nav__item">
+                <a href="#skills" class="nav__link">
+                    <i class="bx bx-book-alt nav__icon"></i>
+                    <span class="nav__name">Skills</span>
+                </a>
+            </li>
+
+            <li class="nav__item">
+                <a href="#portfolio" class="nav__link">
+                    <i class="bx bx-briefcase-alt nav__icon"></i>
+                    <span class="nav__name">Portfolio</span>
+                </a>
+            </li>
+
+            <li class="nav__item">
+                <a href="#contactme" class="nav__link active-link">
+                    <i class="bx bx-message-square-detail nav__icon"></i>
+                    <span class="nav__name">Contactme</span>
+                </a>
+            </li>
+        </ul>
+    </div>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
