--- a/obu.html
+++ b/obu.html
@@ -971,6 +971,13 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
 
     </div>
     <style>
+.nav {
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
 @media screen and (max-width: 767px) {
   .nav__menu {
