--- a/obu.html
+++ b/obu.html
@@ -973,7 +973,7 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
     <style>
 .nav {
   height: var(--header-height);
-  display: flex;
+  display: table-row;
   justify-content: space-between;
   align-items: center;
 }
