--- a/obu.html
+++ b/obu.html
@@ -1042,7 +1042,7 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link active-link">
+                            <a href="#Old Boy's Union" class="nav__link active-link">
                                 <i class='bx bx-home-alt nav__icon'></i>
                                 <span class="nav__name">Home</span>
                             </a>
