--- a/obu.html
+++ b/obu.html
@@ -1056,7 +1056,7 @@ img {
 
 /*=============== HEADER ===============*/
 .header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -1073,15 +1073,6 @@ img {
   align-items: center;
 }
 
-.nav__img {
-  width: 32px;
-  border-radius: 50%;
-}
-
-.nav__logo {
-  color: var(--title-color);
-  font-weight: 600;
-}
 
 @media screen and (max-width: 767px) {
   .nav__menu {
