--- a/obu.html
+++ b/obu.html
@@ -1025,20 +1025,19 @@ a {
 
 
 @media screen and (max-width: 767px) {
-  .nav__menu {
+.nav__menu {
     position: fixed;
     bottom: 0;
     left: 0;
-    background-color: var(--container-color);
+    background-color: white;
     box-shadow: 0 -1px 12px hsla(var(--hue), var(--sat), 15%, 0.15);
     width: 100%;
     height: 4rem;
     padding: 0 1rem;
-    display: grid;
+    /* display: grid; */
     align-content: center;
     border-radius: 1.25rem 1.25rem 0 0;
     transition: .4s;
-  }
 }
 
 .nav__list, 
