--- a/obu.html
+++ b/obu.html
@@ -1059,7 +1059,7 @@ a {
 
 .nav__name {
   font-size: var(--tiny-font-size);
-  /* display: none;*/ /* Minimalist design, hidden labels */
+ display: none;*/ /* Minimalist design, hidden labels */
 }
 
 .nav__icon {
