--- a/obu.html
+++ b/obu.html
@@ -1069,7 +1069,7 @@ a {
 /*Active link*/
 .active-link {
   position: relative;
-  color: var(--first-color);
+  color: rgb(3, 3, 131);
   transition: .3s;
 }
 
