--- a/obu.html
+++ b/obu.html
@@ -258,7 +258,7 @@ ul a:hover::after {
                 </a>
             </div>
             <style>
-                section {
+                body {
                     font-family: "Poppins", sans-serif;
         }
                 }
