--- a/obu.html
+++ b/obu.html
@@ -259,7 +259,7 @@ ul a:hover::after {
             </div>
             <style>
                 body {
-                    font-family: "Poppins", sans-serif;
+                    font-family: 'Poppins', sans-serif;
         }
                 }
             </style>
@@ -489,16 +489,13 @@ ul a:hover::after {
         </br>
         <!-- NEWS EVENTS -->
         <head>
-            <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-            integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
           />
         </head>
         <style>
-            @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+           @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
         
         * {
         margin: 0;
