--- a/obu.html
+++ b/obu.html
@@ -490,9 +490,8 @@ ul a:hover::after {
         <!-- NEWS EVENTS -->
         <head>
             <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-          />
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         </head>
         <style>
            @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
