--- a/obu.html
+++ b/obu.html
@@ -489,7 +489,10 @@ ul a:hover::after {
         </head>
         <style>
            @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+           
+           .container {
            font-family: 'Poppins', sans-serif;
+           }
         * {
         margin: 0;
         padding: 0;
