--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -513,26 +513,21 @@ margin: -5vw -9vw 2vw;
 </div>
 </div>
 </br>
-    <head>
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <style>
-    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
-
+   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+   
+   .container {
+   font-family: 'Poppins', sans-serif;
+   }
 * {
 margin: 0;
 padding: 0;
 box-sizing: border-box;
-}
-
-body {
-font-family: "Poppins", sans-serif;
 }
 
 
