--- a/about.html
+++ b/about.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <style>
+    
+   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+   
+   .container {
+   font-family: 'Poppins', sans-serif;
+   }
 .navbar-nav li{
   list-style: none;
 }
