--- a/directors_message.html
+++ b/directors_message.html
@@ -229,6 +229,7 @@
                     </div>
                 </div>
                 <div class="dir-text">
+                    <img class="responsive-img circle" src="Administration/Bro. R. Joseph Jeyakanthan.jpg">
                     <p>
                         
                     </p>
