--- a/directors_message.html
+++ b/directors_message.html
@@ -219,7 +219,7 @@
             <!-- Contents starts here -->
             <div class="content dir-msg">
                 <div class="dir-detail">
-                    <img class="responsive-img circle" src="Administration/Bro. R. Joseph Jeyakanthan.jpg">
+                    <img class="responsive-img circle" src="Administration/Rev. Br. Joseph Jeyakanthan FSC.jpg">
                     <div>Bro. R. Joseph Jeyakanthan</div>
                     <div>
                         Director DLS
@@ -229,7 +229,6 @@
                     </div>
                 </div>
                 <div class="dir-text">
-                    <img class="responsive-img circle" src="Administration/Bro. R. Joseph Jeyakanthan.jpg">
                     <p>
                         
                     </p>
