--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>De La Salle College, Colombo - "Indivisa Manent"</title>
-    <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
+    <link rel="icon" type="image/png" href="img/DLSC_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -104,7 +104,7 @@
             <div class="header-container">
                 <div>
                     <div class="logo-name">
-                        <div class="logo"><a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png"
+                        <div class="logo"><a href="index.html" title=""><img src="img/DLSC_Logo_1x1_small.png"
                                                                              alt="logo"></a></div>
                         <div class="name">
                             <a href="index.html" title="">
@@ -318,7 +318,7 @@
                     <div class="carousel-caption slider-con">
                         <h2>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></h2>
          
-                        <img height="70px" src="img/IIITV_Logo_1x1_small.png" alt="DLSOBU">
+                        <img height="70px" src="img/DLSC_Logo_1x1_small.png" alt="DLSOBU">
                 <div></div>
                         <p>~ INDIVISA MANENT ~</p>
                         
@@ -560,7 +560,7 @@
                     <ul id="announcement-list">
                         <li>
                             For admissions  <b>who wish to apply for the</b> visit:<br><a
-                                href="http://pgadmissions.iiitvadodara.ac.in" target="_blank"> GCE Advanced Level academic year 2021/2023</a>
+                                href="#" target="_blank"> GCE Advanced Level academic year 2021/2023</a>
                         </li>
                         <li>
                             For queries related to <b>any of programs </b>contact us at: &nbsp; &nbsp; <span
@@ -992,7 +992,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
-            <span class="logo"><img style="border-radius: 100%"  src="img/IIITV_Logo_1x1_small.png" alt=""></span>
+            <span class="logo"><img style="border-radius: 100%"  src="img/DLSC_Logo_1x1_small.png" alt=""></span>
            <div class="row">
                 <!--<div class="col-sm-4 address">-->
 			<center>	<p>
