--- a/admissions.html
+++ b/admissions.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>De La Salle College Colombo 15 | Admissions</title>
     <!--Style Starts-->
-    <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
+    <link rel="icon" type="image/png" href="img/DLSC_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -23,7 +23,7 @@
                 <div>
                     <div class="logo-name">
                         <div class="logo">
-                            <a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png" alt="logo"></a>
+                            <a href="index.html" title=""><img src="img/DLSC_Logo_1x1_small.png" alt="logo"></a>
                         </div>
                         <div class="name">
                             <a href="index.html" title="">
@@ -254,7 +254,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
-            <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
+            <span class="logo"><img src="img/DLSC_Logo_1x1_small.png" alt=""></span>
             <div class="row">
                 <div class="col-sm-4 address">
                     <strong>Address : </strong>c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
