--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De La Salle College Colombo 15 | Contact Us</title>
     <!--Style Starts-->
-    <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
+    <link rel="icon" type="image/png" href="img/DLSC_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/waves.min.css">
@@ -25,7 +25,7 @@
                     <div>
                         <div class="logo-name">
                             <div class="logo">
-                                <a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png" alt="logo"></a>
+                                <a href="index.html" title=""><img src="img/DLSC_Logo_1x1_small.png" alt="logo"></a>
                             </div>
                             <div class="name">
                                 <a href="index.html" title="">
@@ -491,7 +491,7 @@ body{margin-top:20px;}
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
-                <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
+                <span class="logo"><img src="img/DLSC_Logo_1x1_small.png" alt=""></span>
                 <div class="row">
                     <div class="col-sm-4 address">
                         <strong>Address : </strong> c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
