--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -258,6 +258,7 @@
                 </div>
             </nav>
         </header>
+        <embed src="melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" loop="false" autostart="true" width="2" height="0">
         <!-- /header -->
         <div style="text-align: center;">
             <a href="#" target="_blank"-->
