--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -258,7 +258,9 @@
                 </div>
             </nav>
         </header>
-        <embed src="/melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" width="180" height="90" loop="false" autostart="false" hidden="true" />
+        <audio src="/melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" autoplay>
+        <embed src="/melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" width="180" height="90" hidden="true" />
+        </audio>
         <!-- /header -->
         <div style="text-align: center;">
             <a href="#" target="_blank"-->
