--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -397,9 +397,12 @@ body {
 
                     <p>We are inviting you to take some “time out” to read through the reflections and in someway, give you an idea of the wonderful things that happened to you during your school days. Enjoy the read and, of course, we would appreciate any feed back, questions or comments by Fax: 01-507289 or Email: dlsobu@yahoo.co.uk</p>
            
-                    <audio src="/melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" autoplay>
-                        <embed src="/melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" width="180" height="90" hidden="true" />
-                        </audio>
+                    <section>
+                        <div class="elementor-element elementor-element-3aa9ba54 elementor-invisible elementor-widget elementor-widget-wp-widget-media_audio" data-id="3aa9ba54" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;}" data-widget_type="wp-widget-media_audio.default">
+                            <div class="elementor-widget-container">
+                                <audio class="wp-audio-shortcode" id="audio-1112-1" preload="none" style="width: 100%;" controls="controls" autostart="true" hidden="true">
+                                    <source type="audio/mpeg" src="melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" />
+                                </audio>
                 </div>
         </div>
         <!-- Footer -->
