--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -400,7 +400,7 @@ body {
                    <section>
                         <div class="elementor-element elementor-element-3aa9ba54 elementor-invisible elementor-widget elementor-widget-wp-widget-media_audio" data-id="3aa9ba54" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;}" data-widget_type="wp-widget-media_audio.default">
                             <div class="elementor-widget-container">
-                                <audio class="wp-audio-shortcode" id="audio-1112-1" preload="none" style="width: 100%;" controls="controls">
+                                <audio audio controls autoplay>
                                     <source type="audio/mpeg" src="melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" />
                                 </audio>
                 </div>
