--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -401,7 +401,7 @@ body {
                         <div class="elementor-element elementor-element-3aa9ba54 elementor-invisible elementor-widget elementor-widget-wp-widget-media_audio" data-id="3aa9ba54" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;}" data-widget_type="wp-widget-media_audio.default">
                             <div class="elementor-widget-container">
                                 <audio>
-                                    <source type="audio/mpeg" src="melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" autoplay />
+                                    <source type="audio/mpeg" src="melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" autostart="false" hidden="true"/>
                                 </audio>
                 </div>
         </div>
