--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -397,12 +397,10 @@ body {
 
                     <p>We are inviting you to take some “time out” to read through the reflections and in someway, give you an idea of the wonderful things that happened to you during your school days. Enjoy the read and, of course, we would appreciate any feed back, questions or comments by Fax: 01-507289 or Email: dlsobu@yahoo.co.uk</p>
            
-                   <section>
-                        <div class="elementor-element elementor-element-3aa9ba54 elementor-invisible elementor-widget elementor-widget-wp-widget-media_audio" data-id="3aa9ba54" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;}" data-widget_type="wp-widget-media_audio.default">
-                            <div class="elementor-widget-container">
-                                <audio>
-                                    <source type="audio/mpeg" src="melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" autostart="false" hidden="true"/>
-                                </audio>
+                    <audio controls autoplay>
+                        <source src="melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                      </audio>
                 </div>
         </div>
                         </div>
