--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -437,7 +437,7 @@ button.fade:hover {
   <i class="fas fa-volume-up"></i>
 </button>
 <script>
-    const mmmm = document.querySelector("#button");
+    const button = document.querySelector("#button");
 const icon = document.querySelector("#button > i");
 const audio = document.querySelector("audio");
 
