--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -398,7 +398,7 @@ body {
                     <p>We are inviting you to take some “time out” to read through the reflections and in someway, give you an idea of the wonderful things that happened to you during your school days. Enjoy the read and, of course, we would appreciate any feed back, questions or comments by Fax: 01-507289 or Email: dlsobu@yahoo.co.uk</p>
            
                     <audio controls autoplay>
-                        <source src="melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" type="audio/mpeg">
+                        <source src="melodyloops-preview-once-upon-a-christmas-fairytale-0m30s.mp3" type="audio/mpeg" hidden="true">
                      </audio>
                     <script>
                         $(document).ready(function() {
