--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -504,6 +504,7 @@ margin: -5vw -9vw 2vw;
         <p>  Also other pages on the new website have been enhanced. Here you will discover important information for our present and prospective clients.</p>
    
         <br/>
+        <center><img class="responsive-img" src="../img/site development team.jpg" style="width: 500px; height:auto;"></br></center>
         <p>  and other areas on the new website have been enhanced. Here you will discover important information for our present and prospective clients.</p>
 
        <blockquote> Contact For any questions, suggestions, feedback or comments, <a style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" href="mailto:College@delasalle.lk">E-mail us</a>! </blockquote>
