--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -623,12 +623,12 @@ margin: 0 20px;
         <div class="avatar">
           <div class="user-online-indicator"></div>
           <img
-            src="https://www.kasuncfernando.tk/images/avatar.jpg"
+            src="../img/DLSC_Logo_1x1_small.png"
             alt="user-image"
           />
         </div>
-        <div class="profile-name"><h1>Kasun</h1></div>
-        <div class="profile-role">Frontend developer</div>
+        <div class="profile-name"><h1>Admin</h1></div>
+        <div class="profile-role">Last Updated:2021-12-03</div>
       </div>
 
       <div class="card-footer">
