--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -627,7 +627,7 @@ margin: 0 20px;
             alt="user-image"
           />
         </div>
-        <div class="profile-name"><h1>Admin</h1></div>
+        <div class="profile-name"><h1><strong>Admin</strong></h1></div>
         <div class="profile-role">Last Updated: <span>2021-12-03 </span></div>
       </div>
 
