--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -623,7 +623,7 @@ margin: 0 20px;
         <div class="avatar">
           <div class="user-online-indicator"></div>
           <img
-            src="../img/DLSC_Logo_1x1_small.png"
+            src="../news/dlscrest.jpg"
             alt="user-image"
           />
         </div>
