--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -633,7 +633,7 @@ margin: 0 20px;
 
       <div class="card-footer">
         <div class="social-buttons">
-          <button>
+          <button action="https://www.facebook.com/DeLaSalleCollegeColombo">
             <i class="fab fa-facebook"></i>
           </button>
 
