--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -633,8 +633,9 @@ margin: 0 20px;
 
       <div class="card-footer">
         <div class="social-buttons">
-          <button action="https://www.facebook.com/DeLaSalleCollegeColombo">
-            <i class="fab fa-facebook"></i>
+            <a href="https://www.facebook.com/DeLaSalleCollegeColombo/">
+          <button>
+            <i class="fab fa-facebook"></i></a>
           </button>
 
           <button>
