--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -638,8 +638,9 @@ margin: 0 20px;
             <i class="fab fa-facebook"></i></a>
           </button>
 
+          <a href="https://www.twitter.com/delasalleColombo">
           <button>
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter"></i> </a>
           </button>
         </div>
       </div>
