--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -623,7 +623,7 @@ margin: 0 20px;
         <div class="avatar">
           <div class="user-online-indicator"></div>
           <img
-            src="../news/dlscrest.jpg"
+            src="../img/dlscrest.jpg"
             alt="user-image"
           />
         </div>
