--- a/view-events.html
+++ b/view-events.html
@@ -1,6 +1,6 @@
 <!--
  * Official Website of De La Salle College, Colombo-15
- * A project of SJC ICTS 2021 Batch
+ * A project of DLS COLLEGE
  * Design & Develop by : Kasun Chanuka Fernando,
 -->
 
