--- a/view-events.html
+++ b/view-events.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De La Salle College Colombo 15 | About</title>
+    <title>De La Salle College Colombo 15 | Events</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/DLSC_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
