--- a/staff.html
+++ b/staff.html
@@ -222,86 +222,86 @@
                 <br>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <h3>Mr. C.P. Joglekar </h3>
+                        <h3>Name</h3>
                         <div class="row">
                             <div class="col-sm-4 col-md-4 col-lg-4">
                                 <img src="img/CPJ.jpg">
                             </div>
                             <div class="col-sm-10 col-md-10 col-lg-10">
-                                <b>Registrar</b>
-                                <br/> Contact : <b>registrar@iiitvadodara.ac.in</b>
+                                <b></b>
+                                <br/> Contact : <b></b>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
-                        <h3>Mrs. Namrata Bhouraskar</h3>
+                        <h3>Name</h3>
                         <div class="row">
                             <div class="col-sm-4 col-md-4 col-lg-4">
                                 <img src="img/NAMRATA.jpg">
                             </div>
                             <div class="col-sm-10 col-md-10 col-lg-10">
-                                Secretary to Registrar cum Accountant
-                                <br/> Contact : <b>namrata@iiitvadodara.ac.in</b>
+                                text here
+                                <br/> Contact : <b></b>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
-                        <h3>Mr. N.D. Raval  </h3>
+                        <h3>Name  </h3>
                         <div class="row">
                             <div class="col-sm-4 col-md-4 col-lg-4">
                                 <img src="img/nigam.jpg">
                             </div>
                             <div class="col-sm-10 col-md-10 col-lg-10">
-                                Jr. Technical Superintendent
-                                <br/> Contact : <b>ndraval@iiitvadodara.ac.in</b>
+                                text here
+                                <br/> Contact : <b></b>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
-                        <h3>Mr. Jitu Sharma </h3>
+                        <h3>Name </h3>
                         <div class="row">
                             <div class="col-sm-4 col-md-4 col-lg-4">
                                 <img src="img/jitu.jpg">
                             </div>
                             <div class="col-sm-10 col-md-10 col-lg-10">
-                                Jr. Technical Superintendent
-                                <br/> Contact : <b>jitusharma@iiitvadodara.ac.in</b>
+                                text here
+                                <br/> Contact : <b></b>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
-                        <h3>Mr. Jaykumar Joshi  </h3>
+                        <h3>Name  </h3>
                         <div class="row">
                             <div class="col-sm-4 col-md-4 col-lg-4">
                                 <img src="img/JaykumarJoshi.jpg">
                             </div>
                             <div class="col-sm-10 col-md-10 col-lg-10">
-                                Library Trainee
-                                <br/> Contact : <b>jay.joshi@iiitvadodara.ac.in</b>
+                                Text here
+                                <br/> Contact : <b></b>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
-                        <h3>Ms. Darshana Rana  </h3>
+                        <h3>Name  </h3>
                         <div class="row">
                             <div class="col-sm-4 col-md-4 col-lg-4">
                                 <img src="img/darshana.jpg">
                             </div>
                             <div class="col-sm-10 col-md-10 col-lg-10">
                                 Administrative Assistant
-                                <br/> Contact : <b>darshana@iiitvadodara.ac.in</b>
+                                <br/> Contact : <b></b>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
-                        <h3>Mr. Yogesh Gameti </h3>
+                        <h3>Name </h3>
                         <div class="row">
                             <div class="col-sm-4 col-md-4 col-lg-4">
                                 <img src="img/yogesh.jpg">
                             </div>
                             <div class="col-sm-10 col-md-10 col-lg-10">
-                                Messenger cum Peon
-                                <br/> Contact : <b>yogesh@iiitvadodara.ac.in</b>
+                                Text Here
+                                <br/> Contact : <b></b>
                             </div>
                         </div>
                     </li>
