--- a/blog1.html
+++ b/blog1.html
@@ -42,7 +42,6 @@
 </style>
 
 <body>
-  <div class="lds-ripple"><div></div><div></div></div>
     <!-- Start Your Body Code From here -->
     <div class="wrapper">
         <!-- header starts here -->
@@ -189,41 +188,37 @@
             </nav>
         </header>
         <style>
-          .lds-ripple {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
+          .placeholder-item {
+    box-shadow: 0 4px 10px 0 rgba(33, 33, 33, 0.15);
+    border-radius: 4px;
+    height: 200px;
+    position: relative;
+    overflow: hidden;
 }
-.lds-ripple div {
-  position: absolute;
-  border: 4px solid #cef;
-  opacity: 1;
-  border-radius: 50%;
-  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-}
-.lds-ripple div:nth-child(2) {
-  animation-delay: -0.5s;
-}
-@keyframes lds-ripple {
-  0% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
-  100% {
-    top: 0px;
-    left: 0px;
-    width: 72px;
-    height: 72px;
-    opacity: 0;
-  }
+.placeholder-item::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: -150px;
+    top: 0;
+    height: 100%;
+    width: 150px;
+    background: linear-gradient(to right, transparent 0%, #E8E8E8 50%, transparent 100%);
+    animation: load 1s cubic-bezier(0.4, 0.0, 0.2, 1) infinite;
 }
 
+@keyframes load {
+    from {
+        left: -150px;
+    }
+    to   {
+        left: 100%;
+    }
+}
+          
         </style>
-        <!-- /header -->
+        <div class="placeholder-item"></div>
+
         <div style="text-align: center;">
                 <a href="#" target="_blank"-->
                     <img class="responsive-img" src="gif/about.gif">
