--- a/directors_message.html
+++ b/directors_message.html
@@ -279,6 +279,8 @@
                     </p>
                 </div>
             </div>
+            </div> 
+            </div>
         </div>
         <!-- Footer -->
         <footer>
