--- a/deputy-principal.html
+++ b/deputy-principal.html
@@ -258,7 +258,7 @@
             <div class="card shadow1">
             <div class="content dir-msg">
                 <div class="dir-detail">
-                    <img class="responsive-img circle" src="Administration/Mr.Susantha Devarathnayaka.jpg">
+                    <img class="responsive-img circle" src="Administration/Mr.Susantha Devarathnayaka.jpg" width="157px" height="157px">
                     <div>Mr.Susantha Devarathnayaka</div>
                     <div>
                         Deputy Principal
