--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item slider1 active">
-                    <!--style>
+                    <style>
                         * {
                     -webkit-box-sizing: border-box;
                     -moz-box-sizing: border-box;
@@ -483,7 +483,7 @@
                                 </div>
                             </div>            
                         </div>
-                    </div-->
+                    </div>
                     <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
                         <source src="vid/dlscrest.mp4" type="video/mp4">
                     </video>
