--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                 <source src="vid/dlscrest.mp4" type="video/mp4" />
               </video>
               <div class="carousel-caption slider-con">
-                <p style="font-family: 'Times New Roman', Times, serif" >
+                <p style="font-family: 'Times New Roman', Times, serif", font-size: 24px;>
                  <strong> OVER 116TH PROUD ANNIVERSARY WITH
                   <span> DE LA SALLE COLLEGE </strong></span>
                 </p>
