--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item slider1 active">
-              <style>
+              <!--style>
                 * {
                   -webkit-box-sizing: border-box;
                   -moz-box-sizing: border-box;
@@ -666,9 +666,9 @@
                     margin: 0 0 10px 0;
                   }
                 }
-              </style>
+              </style-->
 
-              <div class="wrapper">
+              <!--div class="wrapper">
                 <!--figure>
                             <img src="crest.png" alt="De La Salle College">
                         </figure-->
@@ -688,7 +688,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div-->
               <video
                 autoplay="autoplay"
                 loop="loop"
