--- a/index.html
+++ b/index.html
@@ -668,11 +668,11 @@
                 }
               </style-->
 
-              <!--div class="wrapper">
+              <div class="wrapper">
                 <!--figure>
                             <img src="crest.png" alt="De La Salle College">
                         </figure-->
-                <div class="content">
+                <!--div class="content">
                   <div class="box">
                     <h1>
                       Welcome to De La Salle College,Colombo - Indivisa Manent
