--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item slider1 active">
-              <!--style>
+              <style>
                 * {
                   -webkit-box-sizing: border-box;
                   -moz-box-sizing: border-box;
@@ -640,7 +640,7 @@
 
                 @media (max-width: 480px) {
                   .wrapper {
-                    background-image: url(https://raw.githubusercontent.com/kasuncfdo/Maintain-page-of-dls/main/bg-media.jpg);
+                    background-image: url(https://raw.githubusercontent.com/kasuncfdo/Maintain-page-of-dls/main/homehero-mobile.jpg);
                     background-size: cover;
                   }
 
@@ -666,13 +666,13 @@
                     margin: 0 0 10px 0;
                   }
                 }
-              </style-->
+              </style>
 
               <div class="wrapper">
                 <!--figure>
                             <img src="crest.png" alt="De La Salle College">
                         </figure-->
-                <!--div class="content">
+                <div class="content">
                   <div class="box">
                     <h1>
                       Welcome to De La Salle College,Colombo - Indivisa Manent
@@ -686,7 +686,7 @@
                         Schools in Latin: "Fratres Scholarum Christianarum".
                       </p>
                     </div>
-                  </div-->
+                  </div>
                 </div>
               </div>
               <video
