--- a/index.html
+++ b/index.html
@@ -521,6 +521,11 @@
           <div class="carousel-inner">
             <div class="item slider1 active">
             </div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <section>
               <style>
                 * {
                   -webkit-box-sizing: border-box;
