--- a/index.html
+++ b/index.html
@@ -686,6 +686,8 @@
                         Teachers St. John Baptist de la Salle, founder of the
                         congregation of De La Salle Brothers of the Christian
                         Schools in Latin: "Fratres Scholarum Christianarum".
+                        <br>
+                        De La Salle College was opened on 01 st February 1905 with 22 boys on roll. The object of this School is to give the boys of the Mutwal mission an opportunity to receive an elementary English Education. It is the first “English School” to be set up in this part of Colombo North.
                       </p>
                     </div>
                   </div>
