--- a/index.html
+++ b/index.html
@@ -512,6 +512,10 @@
           </div>
         </nav>
       </header>
+            </div>
+          </div>
+        </nav>
+      </header>
       <!-- /header -->
 
       <!-- VIDEO -->
